Fix lil' spacing issue with the headers

--- a/ui/src/Pages/Preferences/Invites.scss
+++ b/ui/src/Pages/Preferences/Invites.scss
@@ -11,6 +11,7 @@
 
   .heading {
     padding: .5em .5em 0 .5em;
+    gap: 1em;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1em;
     font-family: "Roboto Bold";
